# ML-HPC-2

./: README.md
Regresion Lineal/: insuranceHPC.csv
Regresion Lineal/Modelo C++/: CMakeLists.txt  main.cpp
Regresion Lineal/Modelo C++/Extraer Data/: extraerdata.cpp  extraerdata.h
Regresion Lineal/Modelo C++/Ficheros C++/: y_test_hat.txt
Regresion Lineal/Modelo C++/Regresion Lineal/: linealregression.cpp  linealregression.h
Regresion Lineal/Modelo en Python Sklearn/: Insurance_HPC_2.ipynb
